--- a/style.css
+++ b/style.css
@@ -267,6 +267,9 @@ li{
 
 
 @media (max-width: 1190px) {
+    .banner h1{
+    font-size: 48px;
+    }
     .navbar_D{
         /* 隱藏選單 */
         max-height: 0px;
